# ClaudeRunner

./: .gitignore  LICENSE  README.md  TUTORIAL.md  addendum.yaml  bto_runner_20260322_160812_report.txt  bto_runner_20260323_133700_report.txt  bto_runner_20260323_144621_report.txt  build_exe.py  claude-runner-debug.spec  claude-runner.spec  pyproject.toml  test-proj.yaml  watchdog.py
.claude/: HANDOFF.md
.claude-runner/: addendum-report.md  final-pytest.txt  pytest-output.txt  self-test-report.md
bto-sim/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  bto-sim.csproj
bto-sim/configs/: config.json  config_sandwich_sweep.json
bto-sim/cs/: Config.cs  SolverCatalog.cs
bto-sim/py/solvers/: BTO_ML_Dataset_Generator_LHS_Fast.py  BTO_Sandwich_Flat.py  Sandwich_Autosweeper.py  run_staged_5structures.bat  run_staged_5structures_unlocked.bat  run_staged_5structures_wide.bat  run_wide_9parallel.bat  sweeper_staged_parallel_1to3.bat  util.py
claude_runner/: __init__.py  __main__.py  acceptance_runner.py  autostart.py  cccs_parser.py  config.py  constraint_checker.py  context_manager.py  daemon.py  git_inbox.py  inbox.py  kpi_collector.py  main.py  model_resolver.py  model_watchdog.py  notify.py  ntfy_client.py  persistence.py  pipeline.py  preflight.py  process.py  project.py  rate_limit.py  runner.py  supervisor_audit.py  supervisor_lib.md  supervisor_protocol.py  thinking_manual.py  tui.py  worker_supervisor.py
claude_runner/presets/: cccs-v1.0.cccs.toml
claude_runner/sandbox/: __init__.py  docker_sandbox.py  native_sandbox.py
docker/: Dockerfile
docs/: CCCS_SPEC.md  cccs-v1.0.bib
projects/: bto-sim.yaml  bto_runner.yaml  example_sandboxed.yaml  example_simple.yaml  examples.yaml  furina-ascii.yaml  hello_world.yaml  marathon.yaml  self-test.yaml
projects/examples/: furina.py  furina.spec
projects/self-test/: self-test.yaml
projects/self-test/.claude-runner/: pytest-output.txt  self-test-report.md
release/projects/: examples.yaml
test-yamls/: HANDOFF_BTO_SIM.md  bto_runner.yaml  bto_simulation_on_structures_March26.yaml  run_bto_lean.py
tests/: conftest.py  test_autostart.py  test_cccs_parser.py  test_configure_features.py  test_constraint_checker.py  test_context_manager.py  test_daemon.py  test_docker_oauth_mounts.py  test_git_inbox.py  test_inbox.py  test_milestone_and_git.py  test_milestone_dedup.py  test_model_resolver.py  test_model_watchdog.py  test_notify.py  test_notify_passthrough.py  test_ntfy_client.py  test_pause_resume.py  test_persistence.py  test_pipeline.py  test_preflight.py  test_project.py  test_project_model_schedule.py  test_rate_limit.py  test_self_test_yaml.py  test_supervisor_protocol.py  test_trash_cli.py
