# pyproject.toml — claude-runner
#
# PEP 517/518 build configuration for the claude-runner package.
# Build backend: hatchling (modern, zero-config, recommended for new projects).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "claude-runner"
version = "1.0.0"
description = "Self-orchestrating Claude Code execution framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Claude Runner Contributors" },
]
keywords = [
    "claude",
    "anthropic",
    "automation",
    "orchestration",
    "subprocess",
    "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]

# ---------------------------------------------------------------------------
# Core runtime dependencies
#   pyyaml      — project-book and config YAML parsing
#   rich        — terminal UI, progress bars, styled output
#   apprise     — unified notification backend (email, desktop, webhook, …)
#   pywinpty    — Windows pseudo-terminal support for driving Claude's TTY
#   docker      — Docker SDK for Python (sandbox container management)
#   click       — CLI framework
#   pydantic    — data validation / settings (v2 required)
# ---------------------------------------------------------------------------

dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "apprise>=1.7",
    "pywinpty>=2.0",
    "docker>=7.0",
    "click>=8.1",
    "pydantic>=2.0",
]


# ---------------------------------------------------------------------------
# Optional / extras
# ---------------------------------------------------------------------------

[project.optional-dependencies]

# wexpect: Windows-native expect-style interaction with subprocesses.
# Alternative to pywinpty for simpler expect-pattern use cases.
wexpect = [
    "wexpect>=4.0",
]

# api: Expose claude-runner as an HTTP service (task submission, status polling).
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

# keyring: Secure credential storage via Windows Credential Manager.
# Used by config.py Priority 4 API-key resolution.
keyring = [
    "keyring>=25.0",
]

# all: Install every optional extra at once.
all = [
    "claude-runner[wexpect,api,keyring]",
]

# dev: Tools needed for local development and CI only.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "hatch",
]


# ---------------------------------------------------------------------------
# CLI entry points
# ---------------------------------------------------------------------------

[project.scripts]
# The CLI command is "claude-runner" (hyphen); the Python entry point lives in
# the "claude_runner" package (underscore) at claude_runner/main.py::cli.
claude-runner = "claude_runner.main:cli"


# ---------------------------------------------------------------------------
# Project URLs
# ---------------------------------------------------------------------------

[project.urls]
"Source Code" = "https://github.com/example/claude-runner"
"Issue Tracker" = "https://github.com/example/claude-runner/issues"


# ---------------------------------------------------------------------------
# Hatchling build configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
# Hatchling auto-discovers packages.  Explicitly declare the source root so
# the underscore package name is found regardless of the repo layout.
packages = ["claude_runner"]

[tool.hatch.build.targets.sdist]
# Include the projects/ examples and docker/ assets in source distributions.
include = [
    "claude_runner/",
    "projects/",
    "docker/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]


# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["claude_runner"]


# ---------------------------------------------------------------------------
# Mypy (static type checking)
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
# Pydantic plugin gives accurate type inference for model fields.
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Third-party stubs may be incomplete; silence errors for these packages.
module = [
    "apprise.*",
    "docker.*",
    "winpty.*",
    "wexpect.*",
    "keyring.*",
]
ignore_missing_imports = true


# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests that require Docker or a live Claude CLI",
    "slow: marks tests with long runtimes",
]


# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["claude_runner"]
omit = ["tests/*", "claude_runner/main.py"]  # CLI shim; tested via integration

[tool.coverage.report]
show_missing = true
fail_under = 70
